intro to html and css practice

--- a/examples/simple-page.html
+++ b/examples/simple-page.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>Hello!
+    <title> Tab name </title>
+  </head>
   <body>
+    <h2> First Session</h2>
+    <h3> Second Session</h3>
     Hackerschool 2022&#8230; The end of midterms?
+
+    <p> roses are red, violets are blue</p>
+    <p> example example example </p>
+    <ol> 
+      <li>list 1</li> 
+      <li>list 2</li>
+    </ol>
+
+    <a href="https://www.w3schools.com/html/html5_semantic_elements.asp ">
+      W3School
+    </a>
+
+    <br>
+    <a href = "https://google.com"><img src= "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png">
+    </a>
+
+
   </body>
 </html>
